k8s/file-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
spec:
  replicas: 1  # Number of pods you want to run
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
        - name: file-service
          image: manojthedonut/file-service:0.2.3  # Your Docker image
          ports:
            - containerPort: 3000  # Port your app listens on
          volumeMounts:
            - name: storage-volume
              mountPath: /mnt/volume  # Path in the container where the PVC is mounted
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: pvc1  # Name of your PVC
