k8s/pdf-conv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pdf-conv

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-conv
  template:
    metadata:
        labels:
          app: pdf-conv
    spec:
      containers:
        - name: pdf-conv
          image: manojthedonut/pdf-conversion-service:0.101
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage-volume
              mountPath: /mnt/volume
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: pvc1
