k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP  # Service accessible within the cluster
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
